--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -30,9 +30,9 @@
                                         <strong>Course:</strong>{{ row.courseName }}<br>
                                         <strong>Class Type:</strong>{{ row.classType }}<br>
                                         <strong>Room:</strong>{{ row.classRoom }}<br>
-                                        <strong>Sections:</strong>
+                                        <strong>Sections:</strong><br>
                                         {% for intake, code, section in row.combined %}
-                                            {{ intake }} | {{ code }} | {{ section }}<br>
+                                            {{ intake }} | {{ code }} | {{ section }};<br>
                                         {% endfor %}
                                     </div>
                                 {% endif %}
