--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -27,29 +27,29 @@
     <div class="content-container">
         <nav class="sidebar" id="sidebar">
             <div class="tab-nav">
-                <a href="{{ url_for('homepage') }}" class="tab-link {% if active_tab == 'hometab' %}active{% endif %}">
+                <a href="{{ url_for('user_homepage') }}" class="tab-link {% if active_tab == 'user_hometab' %}active{% endif %}">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
-                <a href="{{ url_for('ownTimetable') }}" class="tab-link {% if active_tab == 'ownTimetabletab' %}active{% endif %}">
+                <a href="{{ url_for('user_ownTimetable') }}" class="tab-link {% if active_tab == 'user_ownTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
                     <span>Timetable</span>
                 </a>
                 {% if user_level in [2, 3, 4] %}
-                <a href="{{ url_for('mergeTimetable') }}" class="tab-link {% if active_tab == 'mergeTimetabletab' %}active{% endif %}">
+                <a href="{{ url_for('user_mergeTimetable') }}" class="tab-link {% if active_tab == 'user_mergeTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
                     <span>Merge Timetable</span>
                 </a>
                 {% endif %}
-                <a href="{{ url_for('invigilationTimetable') }}" class="tab-link {% if active_tab == 'invigilationTimetabletab' %}active{% endif %}">
+                <a href="{{ url_for('user_invigilationTimetable') }}" class="tab-link {% if active_tab == 'user_invigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
                     <span>Invigilation Timetable</span>
                 </a>
-                <a href="{{ url_for('invigilationReport') }}" class="tab-link {% if active_tab == 'invigilationReporttab' %}active{% endif %}">
+                <a href="{{ url_for('user_invigilationReport') }}" class="tab-link {% if active_tab == 'user_invigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
                     <span>Invigilation Report</span>
                 </a>
-                <a href="{{ url_for('profile') }}" class="tab-link {% if active_tab == 'profiletab' %}active{% endif %}">
+                <a href="{{ url_for('user_profile') }}" class="tab-link {% if active_tab == 'user_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
                 </a>
@@ -77,6 +77,7 @@
         updateDateTime(); // initial run
         setInterval(updateDateTime, 1000); // update every second
     </script>
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
 
