--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -15,7 +15,7 @@
         <div class="user-info">
             {{ user_name }} | {{ user_id }} | 
                 {% if user_level == 1 %} LECTURER
-                {% if user_level == 2 %} DEAN
+                {% elif user_level == 2 %} DEAN
                 {% elif user_level == 3 %} HOS
                 {% elif user_level == 4 %} HOP
                 {% else %} Unknown
