--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -11,9 +11,9 @@
                     <th>Exam Details</th>
                     <th>Number of Invigilators</th>
                     <th>Invigilator Details</th>
-                    <th>Check-in Time</th>
-                    <th>Check-out Time</th>
+                    <th>Check-in/out Time</th>
                     <th>Attendance Status</th>
+                    <th>Invigilation Status</th>
                 </tr>
             </thead>
             <tbody>
@@ -58,11 +58,13 @@
                                 </div>
                             </td>
 
-                            <!-- Check-in Time -->
-                            <td>{{ att.checkIn }}</td>
-
-                            <!-- Check-out Time -->
-                            <td>{{ att.checkOut }}</td>
+                            <!-- Check-in/out Time -->
+                            <td>
+                                <div class="info-grid">
+                                    <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div>
+                                    <div>Check-out Time</div><div><strong>: {{ att.checkIn }}</strong></div>
+                                </div>
+                            </td>
 
                             <!-- Attendance Status -->
                             <td>
@@ -77,9 +79,9 @@
                             </td>
                             <td>
                                 {% if att.invigilationStatus == 1 %}
-                                    <span class="frame-green">Accepted</span>
+                                    <span class="status frame-green">Accepted</span>
                                 {% else %}
-                                    <span class="frame-red">Declined</span>
+                                    <span class="status frame-red">Declined</span>
                                 {% endif %}
                             </td>
                         </tr>
