--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -2,6 +2,16 @@
 {% extends "user/userBase.html" %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
+    {% if userLevel == 1 %}
+        <div class="menu-grid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 1%; width: 100%;;">
+            <div class="menu-section">
+                
+            </div>
+        </div>
+
+
+    {% endif %}
+
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <div class="menu-section">
             <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;"><h2>Own Timetable</h2></a>
