--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -1,8 +1,8 @@
 {% extends "user/userBase.html" %}
 {% block title %}InvigilationReport{% endblock %}
+{% block head_title %}<h2>Invigilation Report</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h3>Invigilation Report</h3>
     <div class="dashboard-row">
         <div class="dashboard-frame">
             <h3>Total Invigilation Reports</h3>
