--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -1,9 +1,8 @@
 {% extends "user/userBase.html" %}
 {% block title %}InvigilationTimetable{% endblock %}
-
+{% block head_title %}<h2>Invigilation Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h3>List of All Exam Sessions Details</h3>
     <div style="display: flex; gap: 15px; align-items: center;">
         <h4>Exam Status:</h4>
         <div style="display: flex; align-items: center; gap: 5px;">
