--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -1,9 +1,8 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
+{% block head_title %}<h2>Own Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Own Timetable</h2>
-    
     <div class="user-table-container" styl="max-height: None;">
         <table class="user-data-table" border="1">
             <thead>
