--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -1,10 +1,9 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
+{% block head_title %}<h2>Merge Timetable</h2>{% endblock %}
+
 {% block content %}
 <div class="menu-section">
-    <h2> Merge Timetable</h2>
-
-    <!-- Timetable Display -->
     <div class="user-table-container" styl="max-height: None;">
         <table class="user-data-table" border="1">
             <thead>
