--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -310,6 +310,7 @@ html, body {
 /* Timeline hours (in header row) */
 .calendar-hour {
     width: 100px;
+    min-width: 100px;
     text-align: center;
     font-size: 16px;
     padding: 5px 0;
