--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -26,11 +26,11 @@
                                 {% set end = row.classTime.split('-')[1].strip() %}
                                 {% if time >= start and time < end %}
                                     <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa;">
-                                        <strong>Course:</strong>{{ row.lecturerName }}<br>
-                                        <strong>Course:</strong>{{ row.courseName }}<br>
-                                        <strong>Class Type:</strong>{{ row.classType }}<br>
-                                        <strong>Room:</strong>{{ row.classRoom }}<br>
-                                        <strong>Sections:</strong><br>
+                                        <strong>Course</strong>: {{ row.lecturerName }}<br>
+                                        <strong>Course</strong>: {{ row.courseName }}<br>
+                                        <strong>Class Type</strong>: {{ row.classType }}<br>
+                                        <strong>Room</strong>: {{ row.classRoom }}<br>
+                                        <strong>Sections</strong>: <br>
                                         {% for intake, code, section in row.combined %}
                                             {{ intake }} | {{ code }} | {{ section }};<br>
                                         {% endfor %}
