--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -13,9 +13,9 @@
     <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
-            <div class="dashboard-row">
+            <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
                 <div class="dashboard-frame">
-                    <h3>Total Invigilation Reports</h3>
+                    <h3>Total Active Invigilation Reports</h3>
                     <p class="dashboard-text">{{ total_report }}</p>
                 </div>
                 <div class="dashboard-frame">
@@ -27,23 +27,23 @@
                     <p class="dashboard-text" style="color:green;">{{ total_inProgress   }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators Pending Check-In/Out</h3>
+                    <h3>Pending Check-In/Out</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkInOut }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators Checked In On Time</h3>
+                    <h3>Checked In On Time</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_checkInOnTime }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators Checked Out On Time</h3>
+                    <h3>Checked Out On Time</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_checkOutOnTime }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators Checked In Late</h3>
+                    <h3>Checked In Late</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkInLate }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Invigilators Checked Out Early</h3>
+                    <h3>Checked Out Early</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkOutEarly }}</p>
                 </div>
             </div>
