--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -66,7 +66,9 @@
             <input type="hidden" name="form_type" value="upload">
             <br>
             <div class="button-wrapper">
-                <button type="submit" id="uploadButton">Upload Lecturer Timetable</button>
+                {% for dept in department_data %}
+                    <button type="submit" id="uploadButton">Upload Lecturer Timetable {{ dept.departmentCode }}</button>
+                {% endfor %}
             </div>
         </div>
     </div>
