--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -66,9 +66,7 @@
             <input type="hidden" name="form_type" value="upload">
             <br>
             <div class="button-wrapper">
-                {% for dept in department_data %}
-                    <button type="submit" id="uploadButton">Upload Lecturer Timetable {{ dept.departmentCode }}</button>
-                {% endfor %}
+                <button type="submit" id="uploadButton">Upload Lecturer Timetable</button>
             </div>
         </div>
     </div>
