--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -3,7 +3,7 @@
 {% block head_title %}<h2>Own Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="user-table-container" styl="max-height: None;">
+    <div class="user-table-container" style="max-height: None;">
         <table class="user-data-table" border="1">
             <thead>
                 <tr>
