--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -26,13 +26,13 @@
                                 {% set end = row.classTime.split('-')[1].strip() %}
                                 {% if time >= start and time < end %}
                                     <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa; margin-bottom: 1%;">
-                                        <strong>Course</strong>: {{ row.lecturerName }}<br>
-                                        <strong>Course</strong>: {{ row.courseName }}<br>
-                                        <strong>Class Type</strong>: {{ row.classType }}<br>
-                                        <strong>Room</strong>: {{ row.classRoom }}<br>
+                                        <strong>Lecturer</strong>: <i>{{ row.lecturerName }}</i><br>
+                                        <strong>Course</strong>:<br><i>{{ row.courseName }}</i><br>
+                                        <strong>Class Type</strong>: <i>{{ row.classType }}</i><br>
+                                        <strong>Room</strong>: <i>{{ row.classRoom }}</i><br>
                                         <strong>Sections</strong>: <br>
                                         {% for intake, code, section in row.combined %}
-                                            {{ intake }} | {{ code }} | {{ section }};<br>
+                                            <i>{{ intake }} | {{ code }} | {{ section }};</i><br>
                                         {% endfor %}
                                     </div>
                                 {% endif %}
