--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -224,7 +224,7 @@
                                             {% set ns.displayed = ns.displayed + [key] %}
                                             <div style="border:1px solid #ccc; padding:4px; background:#f8f9fa; margin-bottom: 1%;">
                                                 <strong>Lecturer</strong>: <i>{{ row.lecturerName }}</i><br>
-                                                <strong>Course</strong>:<br><i>{{ row.courseName }}</i><br>
+                                                <strong>Course</strong>: <i>{{ row.courseName }}</i><br>
                                                 <strong>Class Type</strong>: <i>{{ row.classType }}</i><br>
                                                 <strong>Room</strong>: <i>{{ row.classRoom }}</i>
                                             </div>
