--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -13,14 +13,10 @@
     <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
-            <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
+            <div class="dashboard-row" style="grid-template-columns: repeat(7, 1fr);">
                 <div class="dashboard-frame">
-                    <h3>Total Active Invigilation Reports</h3>
+                    <h3>Active Reports</h3>
                     <p class="dashboard-text">{{ total_report }}</p>
-                </div>
-                <div class="dashboard-frame">
-                    <h3>Total Assigned Invigilators</h3>
-                    <p class="dashboard-text" style="color:green;">{{ total_invigilator }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Exam In Going</h3>
