--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -3,14 +3,10 @@
 {% block head_title %}<h2>Invigilation Report</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
+    <div class="dashboard-row" style="grid-template-columns: repeat(7, 1fr);">
         <div class="dashboard-frame">
-            <h3>Total Active Invigilation Reports</h3>
+            <h3>Active Reports</h3>
             <p class="dashboard-text">{{ total_report }}</p>
-        </div>
-        <div class="dashboard-frame">
-            <h3>Total Assigned Invigilators</h3>
-            <p class="dashboard-text" style="color:green;">{{ total_invigilator }}</p>
         </div>
         <div class="dashboard-frame">
             <h3>Exam In Going</h3>
